# back

./: .gitignore  .isort.cfg  db.sqlite3  manage.py  pyproject.toml  requirements.txt
core/: admin.py  forms.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_alter_tipousuario_desc_tipo.py  0002_remove_usuario_nome_alter_usuario_email_and_more.py  0002_treino_titulo_alter_treino_num_reps_and_more.py  0003_alter_exercicio_descricao_alter_grupomuscular_nome.py  0003_alter_usuario_taxa_atividade_idtaxa_atividade_and_more.py  0003_remove_evolucao_tempo_treino_remove_treino_num_reps_and_more.py  0004_evolucao_massa.py  0004_remove_usuario_taxa_metabolica_basal_and_more.py  0005_alter_alimentacao_options_alter_comida_options_and_more.py  0005_alter_evolucao_taxa_metabolica_basal.py  0006_evolucao_usuario_idusuario.py  0006_numseriesreps_remove_treino_tempo_descanso_and_more.py  0007_alter_evolucao_usuario_idusuario.py  0007_remove_exerciciotreino_num_series_reps_and_more.py  0008_alter_evolucao_altura_alter_evolucao_imc_and_more.py  0008_evolucao_data.py  0009_alter_evolucao_altura.py  0009_remove_evolucao_data.py  0010_alter_evolucao_massa.py  0010_evolucao_data.py  0011_alter_evolucao_tempo_treino.py  0011_rename_exercicio_treino_exercicios_and_more.py  0012_alter_evolucao_data_alter_treino_tempo_descanso.py  0012_alter_exerciciotreino_exercicio.py  0013_alter_evolucao_data.py
core/models/: __init__.py  alimentacao.py  comida.py  evolucao.py  exercicio.py  grupoMuscular.py  taxaAtividade.py  tipoUsuario.py  treino.py  usuario.py
core/serializers/: __init__.py  alimentacao.py  comida.py  evolucao.py  exercicio.py  (+5 more)
fitme/: api.py  asgi.py  settings.py  urls.py  wsgi.py
(+10 files in other folders)
